Completely rework the CombatTag structure